2019-05-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Keyboard shortcut for smart parentheses (Ctrl + parenthesis)

2019-05-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix line breaks placed within Unicode characters in some cases
	* Shorten extremely long lines (> 50 000 characters) in history
	* Take into account line length (since line breaks now is dynamic) when calculating history limit
	* Unmark parentheses when automatically selecting whole expression
	* Only use bold parentheses highlighting if text width does not change
	* Continuous delete when long-pressing DEL button

2019-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix invalid text iterators on rapid input
	* Menu item context menu for deletion and update of meta modes
	* Do not require confirmation on deletion of variables and history bookmarks from context menu

2019-05-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* History bookmarks and protect (from disappearing of the end of the list) option

2019-05-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show result in different number bases, in place of menus over keypad, when programming keypad is used

2019-05-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Insert date dialog (from Edit menu and expression popup menu)
	* Long press/right-click/middle-click actions on buttons in keypad
	* "x =" button, and e on separate button in general left keypad
	* New keypad buttons for moving cursor and cycling through expression history
	* Move percent and raise buttons to the keypad on the right side, and add +/- button
	* Add code() and char() to bases button menu, and rand() to mean button menu
	* Request integer in dialog for root() and similar
	* Do not show insert function dialog for button functions with two arguments

2019-04-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Programming keypad
	* Input base selection in expression popup menu

2019-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
