@@ -1,3 +1,7 @@
+2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix display of number in sexagesimal base or time format
+
 2019-05-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Keyboard shortcut for smart parentheses (Ctrl + parenthesis)
